<resources>
    <string name="app_name">Giphy App</string>
    <string name="home_tab_title">Home</string>
    <string name="favourites_title">Favourites</string>
    <string name="settings_title">Settings</string>
    <string name="clear_favourites">Clear favourites</string>

    //Home
    <string name="search_hint">Type something to search for GIFs</string>
    <string name="no_network_title">No internet connection</string>
    <string name="no_network">Please check your internet connection and try again</string>

    //Favourites
    <string name="no_favourites_text">You haven\'t added any favourites yet</string>

    //Menu
    <string name="download_gif">Download GIF</string>
    <string name="share_gif">Share GIF</string>

    //Notifications
    <string name="notification_description">Gif downloaded</string>

    //Settings
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
    <string name="pref_key_gif_quality" translatable="false">key_gif_quality</string>
    <string name="pref_key_gif_quality_title">High quality mode</string>
    <string name="pref_key_gif_quality_summary">Download and share gifs in a higher quality</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_network">Network</string>
    <string name="download_error">Could not download the gif right now. Please check your internet connection.</string>
</resources>