<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.artur.gifapp.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.artur.gifapp.favourite.FavouriteFragment"
        android:label="@string/favourites_title"
        tools:layout="@layout/favourite_fragment"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.artur.gifapp.settings.SettingsFragment"
        android:label="@string/settings_title" />
</navigation>